# automate-esp-at

./: CMakeLists.txt  README.md  esp32_mock.sh  main.c  todo.txt
inc/board/: board.h  esp32.h  mock.h
inc/network/: network.h
inc/serial_comm/: serial_comm.h
inc/utils/: utils.h
src/board/: board.c  esp32.c  mock.c
src/network/: network.c
src/serial_comm/: serial_comm.c
src/utils/: utils.c
